risc0/zirgen/dsl/test/repro/if_without_expr.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
  // CHECK: error: Expected a condition expression

component Top(x: Val) {
  a := if (x) { 0 } else { 1 };
  b := if ( ) { 1 } else { 0 };
}
